--- a/webui/test-output/old/Default suite/methods-alphabetical.html
+++ b/webui/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98978d">  <td>19/09/26 17:33:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverSuite.FirstTest()[pri:0, instance:autothon.webui.tests.DriverSuite@20398b7c]">FirstTest</td> 
-  <td>main@922872566</td>   <td></td> </tr>
-<tr bgcolor="87bdab">  <td>19/09/26 17:33:53</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:autothon.webui.tests.DriverSuite@20398b7c]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@922872566</td>   <td></td> </tr>
-<tr bgcolor="87bdab">  <td>19/09/26 17:33:53</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeMethod(java.lang.reflect.Method)[pri:0, instance:autothon.webui.tests.DriverSuite@20398b7c]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@922872566</td>   <td></td> </tr>
-<tr bgcolor="87bdab">  <td>19/09/26 17:33:52</td>   <td>-214</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:autothon.webui.tests.DriverSuite@20398b7c]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922872566</td>   <td></td> </tr>
+<tr bgcolor="b792a0">  <td>19/10/25 12:24:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserStackTestNGTest.tearDown()[pri:0, instance:autothon.webui.tests.browserstack.LocalTest@4e1d422d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@215145189</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/10/25 12:24:59</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.test()[pri:0, instance:autothon.webui.tests.browserstack.LocalTest@4e1d422d]">test</td> 
+  <td>main@215145189</td>   <td></td> </tr>
 </table>
